# discord-orgateams

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-linux-release-binary.sh  config-example.toml
.github/workflows/: rust.yml
src/: assembly.rs  cli.rs  config.rs  discord_api.rs  io.rs  main.rs  model.rs  templating.rs
src/templates/: index.html  index.txt
