[package]
name = "orgatalk-discord-orgateams"
version = "0.5.0"
authors = ["Jochen Kupperschmidt"]
edition = "2021"
rust-version = "1.74.0"
description = "List orga teams on the OrgaTalk Discord server"
license = "MIT"
keywords = ["discord"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.40", default-features = false, features = ["now", "std", "serde"] }
clap = { version = "4.5.31", default-features = false, features = ["cargo", "derive", "error-context", "help", "std", "usage", "wrap_help"] }
multimap = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tera = "1.20.0"
toml = "0.8.20"
ureq = { version = "2.9.7", features = ["json"] }
